--- a/backend/package.json
+++ b/backend/package.json
@@ -35,5 +35,8 @@
     "dotenv-cli": "^4.0.0",
     "nodemon": "^2.0.6"
   },
-  "description": ""
+  "description": "",
+  "engines" : {
+    "node" : ">=16.0.0 <17.0.0"
+  }
 }
