--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,5 +40,8 @@
   "devDependencies": {
     "redux-logger": "^3.0.6"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "engines" : {
+    "node" : ">=16.2.0 <17.0.0"
+  }
 }
